# BinarySearchTree

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
BinTree/: main.cpp
examples/: main.cpp
include/: BinarySearchTree.h
source/: BinarySearchTree.cpp
tests/: find.cpp  insert.cpp  main.cpp  remove.cpp  size.cpp
